# wetext

./: .pre-commit-config.yaml  README.md  build_fsts.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: flake8.yml  isort.yml  release.yml
wetext/: __init__.py  cli.py  config.py  constants.py  token_parser.py  utils.py  wetext.py
